# cmake_compile_dispatch

./: CMakeLists.txt  algorithm.h  main.cpp
example/: CMakeLists.txt  algorithm.h  algorithm_defs.h  main.cpp
module/: AddDispatcher.cmake  dispatcher.cpp  dispatcher_selection.h
src/: AddDispatcher.cmake
